<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.connectme.CreateAccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        app:navigationIcon="@drawable/ic_arrow_back_24dp" />

    <ImageView
        android:id="@+id/layoutwave2Header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/create_account_toolbar"
        android:src="@drawable/ic_wave2"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:text="@string/new_account"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/create_account_toolbar"

        app:layout_constraintStart_toStartOf="@id/create_account_toolbar"
        app:layout_constraintTop_toTopOf="@id/create_account_toolbar" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="15dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_email_grey"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutwave2Header" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_lock_grey"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_dob_grey"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_user_grey"
        android:drawablePadding="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_user_grey"
        android:drawablePadding="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_lock_grey"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="300dp"
        android:layout_height="50dp"

        android:background="@drawable/button_background"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/DOB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>