<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_parkconnector">

    <TextView
        android:id="@+id/ParkConnectorHeader"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/park_connectors"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:background="@drawable/search_background"
            app:layout_constraintTop_toBottomOf="@id/ParkConnectorHeader"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/search_icon"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/search_park_connectors"
                android:layout_gravity="center_vertical"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="18sp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/JurongPCN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toStartOf="@id/mandaiPCN"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/jurong_pcn" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jurong_pcn"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/mandaiPCN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toEndOf="@id/JurongPCN"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/mandai_pcn" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mandai_pcn"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    <include layout="@layout/content_activity_parkconnector" />

</androidx.constraintlayout.widget.ConstraintLayout>