<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.connectme.LoginActivity">

    <ImageView
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/header_background"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/layoutwaveHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        android:src="@drawable/ic_wave"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/newuser_text"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="1000dp"
        android:layout_marginEnd="4dp"


        android:text="New user?"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/create_account"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="1000dp"

        android:clickable="true"
        android:focusable="true"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/newuser_text" />

<!--    <TextView-->
<!--        android:id="@+id/forgot_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="400dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:layout_marginRight="15dp"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:text="@string/forgot_password"-->
<!--        android:textColor="@color/colorWhite"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/login"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="110dp"

        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorBlack"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"

        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_email_grey"
        android:drawablePadding="8dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />


    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:drawableLeft="@drawable/ic_lock_grey"
        android:drawablePadding="8dp"
        android:background="@drawable/search_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_background"
        android:enabled="true"
        android:text="@string/title_activity_login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.27" />



</androidx.constraintlayout.widget.ConstraintLayout>