<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/layoutHeader"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/header_background"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <TextView-->
<!--            android:id="@+id/TextWelcome"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:fontFamily="sans-serif-medium"-->
<!--            android:text="@string/welcome"-->
<!--            android:textColor="@color/colorBlack"-->
<!--            android:textSize="25sp"-->
<!--            android:textStyle="normal"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">

            <ImageView
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/header_bg"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/welcome"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/what_do_you_want_to_search_for"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/cardParkConnectors"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader"
                app:layout_constraintStart_toStartOf="@id/cardParkConnectors" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardParkConnectors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cardHawkerCentres"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/treeicon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/park_connectors"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHawkerCentres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/cardParkConnectors"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/foodicon"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hawker_centres"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="14sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardParkConnectors">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPCN"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"

                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp"
                        tools:ignore="UseCompoundDrawables">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity=""
                            android:text="@string/pcn"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation"/>



</androidx.constraintlayout.widget.ConstraintLayout>